some naming related

--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Meditation-Music</title>
 </head>
 <body class="home musicHome">
     <header class="absolute w-full z-20">
