--- a/relax&Breathe.html
+++ b/relax&Breathe.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title>Relax & Breathe</title>
 </head>
 <body class="home musicHome">
     <header class="absolute w-full z-20">
