--- a/talkToHope.html
+++ b/talkToHope.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Oleo+Script:wght@400;700&display=swap" rel="stylesheet">
-    <title>Voice Assistant
-
-    </title>
+    <title>Voice Assistant</title>
 </head>
 <body class="home">
     <header class="relative mb-20 z-20">
