--- a/scene.html
+++ b/scene.html
@@ -86,7 +86,7 @@
 
 
         </div>
-        <video width="320" height="240" controls>
+        <video width="320" height="240" >
           <source src="movie.mp4" type="video/mp4">
           <!-- <source src="movie.ogg" type="video/ogg"> -->
           Your browser does not support the video tag.
